# TraceAtlas

./: .gitignore  CMakeLists.txt  DAGGraphCedr-viz.py  GanttGeneration.py  README.md  cmds.md  compileAndRuntimeify.sh  compileAndRuntimeifyARM.sh  compileAndRuntimeifyx86.sh  compileAndTrace.sh  develop.md  gantt_k-nk.py  note.md  todo.md  traceExtractCompile.sh
AtlasUtil/: CMakeLists.txt
Benchmarks/: CMakeLists.txt
Benchmarks/SAR/: CMakeLists.txt  Makefile  SAR.cpp
Benchmarks/cmake/: TraceAtlasFunctions.cmake
Benchmarks/edge-detection/: CMakeLists.txt  Makefile  README.md  conv.cpp  conv.hpp  experiments.sh  track.cpp
Benchmarks/edge-detection/input/: input_10x_downscaled.txt  input_4x_downscaled.txt
Benchmarks/llvm-13-passes/: CMakeLists.txt  Makefile  api_swap.cpp  erase.cpp  omp-parallel-staged.cpp  omp-parallel.cpp  printBBName.cpp
Benchmarks/llvm-9-passes/: CMakeLists.txt  Makefile  function_inlining.cpp
Benchmarks/llvm-9-passes/code-extractor/: code-extractor-test.cpp
Benchmarks/new_opt_pass/: api_swap.cpp  function_inlining.cpp  swap_nonkernel.cpp
Benchmarks/new_opt_pass/code-extractor/: Makefile
Benchmarks/pulse_doppler/: CMakeLists.txt  LoopTraceFile.json  Makefile  pulse_doppler-original.c  pulse_doppler.c  test_pulse_doppler_omp.c
Benchmarks/pulse_doppler/output/: pulse_doppler_output.txt
Benchmarks/radar-correlator/: CMakeLists.txt  radar-correlator.c
Benchmarks/rf-convergence/: CMakeLists.txt  RF_convergence.c
Benchmarks/task-bench/: CMakeLists.txt  core.cc  task-bench.cpp
Benchmarks/temporal_mitigation/: CMakeLists.txt  main.cpp
Benchmarks/temporal_mitigation/output/: temporal_mitigation_output.txt
Benchmarks/wifi-rx/: CMakeLists.txt  README.txt
Benchmarks/wifi-rx/src/: RX.cpp  detection.c  equalizer.c
Benchmarks/wifi-tx/: CMakeLists.txt
Benchmarks/wifi-tx/src/: TX-omp.cpp  TX-two-instrances.cpp  TX.cpp  common.h
TaskflowIR/: CMakeLists.txt  cmd.md  todo.md
TaskflowIR/include/: CMakeLists.txt
TaskflowIR/include/Taskflow/: CMakeLists.txt  TaskflowDialect.h  TaskflowDialect.td  TaskflowOps.h  TaskflowOps.td  TaskflowTypes.h  TaskflowTypes.td
TaskflowIR/include/Taskflow/Passes/: CMakeLists.txt  Passes.h  Passes.td
TaskflowIR/lib/: CMakeLists.txt
TaskflowIR/lib/Lowering/: CMakeLists.txt  TaskflowToLLVMLowering.cpp
TaskflowIR/lib/Raising/: CMakeLists.txt  TaskflowInsertion.cpp  TaskflowPatternInsertion.cpp
TaskflowIR/lib/Taskflow/: CMakeLists.txt  TaskflowDialect.cpp  TaskflowOps.cpp
TaskflowIR/test/: input.mlir  sample-llvm-ir-back  sample-llvm-ir-back.ll  sample-llvm-ir-final.ll  sample-llvm-ir-final.mlir  taskflow-ir-sample.mlir  test.mlir
TaskflowIR/test/input/: pulse_doppler_main-extracted.mlir  task_merging_schedule.json
TaskflowIR/test/ouput/: output.mlir
TaskflowIR/test/output/: output.mlir  pulse_doppler-no-main.bc  pulse_doppler_link.bc  pulse_doppler_llvm  pulse_doppler_llvm.ll  pulse_doppler_llvm.mlir  pulse_doppler_main-extracted_output.mlir
TaskflowIR/tools/: CMakeLists.txt
TaskflowIR/tools/taskflow-opt/: CMakeLists.txt  taskflow-opt.cpp
Tests/FunctionInlining/: Makefile  test.cpp
Tests/LoopUnroll/: CMakeLists.txt  LoopUnrollTest.cpp  debug_test.sh
TraceInfrastructure/Backend/: BackendKernelLocation.cpp  BackendMemProfile.cpp  BackendTrace.c  CMakeLists.txt  LoopTrace.cpp
TraceInfrastructure/Passes/: Annotate.cpp  CMakeLists.txt  CommandArgs.cpp  DynmFunctionInlining.cpp  DynmKernelLocating.cpp  DynmLoopUnroll.cpp  FunctionInliner.cpp  Functions.cpp  KernelLocating.cpp  KernelStage.cpp  MemProfile.cpp  NonKernelOutliner.cpp  OmpNonkernelParallel.cpp  SplitAllocas.cpp  SplitKernExitEnter.cpp  SwapAPIs.cpp  SwapNonkernel.cpp  TaskMergingReorder.cpp  TestTransformation.cpp  Trace.cpp
TraceInfrastructure/include/Backend/: BackendKernelLocation.h  BackendTrace.h  LoopTrace.h
TraceInfrastructure/include/Passes/: Annotate.h  CommandArgs.h  DynmFunctionInlining.h  DynmKernelLocating.h  DynmLoopUnroll.h  Functions.h  KernelLocating.h  KernelStage.h  MemProfile.h  NonKernelOutliner.h  OmpNonkernelParallel.h  SplitAllocas.h  SplitKernExitEnter.h  SwapAPIs.h  SwapNonkernel.h  TaskMergingReorder.h  TestTransformation.h
Utilities/: CMakeLists.txt  ControlFlow.cpp  DAG-viz.py  DagExtractor.cpp  FatBinDump.cpp  JR.cpp  KernelSerial.cpp  KernelWrapper.cpp  PointBasedDAG.cpp  WorkingSet-viz.py  dag-compare.py
cartographer/: EncodeDetect.cpp  EncodeExtract.cpp  cartographer.cpp
cartographer/include/: EncodeDetect.h  EncodeExtract.h
llvm-13-passes/: MergeTaskExtraction.cpp
llvm-19-passes/: .gitignore  ExtrationPassPipeline.cpp  Makefile  MergeTaskExtraction.cpp  MergeTaskExtraction.h  cmd.md  main-extracted.ll  main-extracted.mlir
tik/: CMakeLists.txt  tik.cpp
